borsh-derive/src/snapshots/borsh_derive__enum_de__tests__generic_deserialize_bound.snap
---
source: borsh-derive/src/enum_de.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
impl<T: Debug, U> borsh::de::BorshDeserialize for A<T, U>
where
    T: PartialOrd + Hash + Eq + borsh::de::BorshDeserialize,
    U: borsh::de::BorshDeserialize,
{
    fn deserialize_reader<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        let tag = <u8 as borsh::de::BorshDeserialize>::deserialize_reader(reader)?;
        <Self as borsh::de::EnumExt>::deserialize_variant(reader, tag)
    }
}
impl<T: Debug, U> borsh::de::EnumExt for A<T, U>
where
    T: PartialOrd + Hash + Eq + borsh::de::BorshDeserialize,
    U: borsh::de::BorshDeserialize,
{
    fn deserialize_variant<R: borsh::__private::maybestd::io::Read>(
        reader: &mut R,
        variant_tag: u8,
    ) -> ::core::result::Result<Self, borsh::__private::maybestd::io::Error> {
        let mut return_value = if variant_tag == 0u8 {
            A::C {
                a: borsh::BorshDeserialize::deserialize_reader(reader)?,
                b: borsh::BorshDeserialize::deserialize_reader(reader)?,
            }
        } else if variant_tag == 1u8 {
            A::D(
                borsh::BorshDeserialize::deserialize_reader(reader)?,
                borsh::BorshDeserialize::deserialize_reader(reader)?,
            )
        } else {
            return Err(
                borsh::__private::maybestd::io::Error::new(
                    borsh::__private::maybestd::io::ErrorKind::InvalidData,
                    borsh::__private::maybestd::format!(
                        "Unexpected variant tag: {:?}", variant_tag
                    ),
                ),
            )
        };
        Ok(return_value)
    }
}

